force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>