force-app/main/default/objects/Survey_Response__c/fields/Are_You_Satisfied_with_Cafetaria_Vender__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Satisfied_with_Cafetaria_Vender__c</fullName>
    <label>Are You Satisfied with Cafetaria Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Need to Improve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>