force-app/main/default/objects/Survey_Response__c/fields/Are_you_satisfied_with_the_quality_of__c.field-meta.xml
<CustomField>
    <fullName>Are_you_satisfied_with_the_quality_of__c</fullName>
    <label>Are you satisfied with quality of Food?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May Be</fullName>
            </value>
            <value>
                <fullName>Can be Improved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>