force-app/main/default/objects/Survey_Response__c/fields/Do_we_need_to_have_more_Indoor_Games__c.field-meta.xml
<CustomField>
    <fullName>Do_we_need_to_have_more_Indoor_Games__c</fullName>
    <label>Do we need to have more Indoor Games</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrom Board</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Basket Ball</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
                <isActive>false</isActive>
                <label>Tennis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>