force-app/main/default/objects/Survey_Response__c/fields/Do_you_feel_that_the_speakers_were_clear__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_that_the_speakers_were_clear__c</fullName>
    <label>Do you feel that the speakers were clear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>