force-app/main/default/objects/Survey_Response__c/fields/Do_you_think_Dell_should_have_Day_Care__c.field-meta.xml
<CustomField>
    <fullName>Do_you_think_Dell_should_have_Day_Care__c</fullName>
    <label>Do you think Dell should have &quot;Day Care&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May Be</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>