force-app/main/default/objects/Survey_Response__c/fields/Do_you_think_we_should_have_more_options__c.field-meta.xml
<CustomField>
    <fullName>Do_you_think_we_should_have_more_options__c</fullName>
    <label>Do you think we should have more options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May Be</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>