force-app/main/default/objects/Survey_Response__c/fields/Does_2_Badminton_Courts_sufficient__c.field-meta.xml
<CustomField>
    <fullName>Does_2_Badminton_Courts_sufficient__c</fullName>
    <label>Are two badminton courts sufficient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Need More</fullName>
            </value>
            <value>
                <fullName>Waiting Time is high</fullName>
            </value>
            <value>
                <fullName>Need to have some details on Court bookings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>