force-app/main/default/objects/Survey_Response__c/fields/How_clear_are_you_on_the_take_away_fr__c.field-meta.xml
<CustomField>
    <fullName>How_clear_are_you_on_the_take_away_fr__c</fullName>
    <label>How clear are you on the take away fr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely clear</fullName>
            </value>
            <value>
                <fullName>Somewhat clear</fullName>
            </value>
            <value>
                <fullName>Not so clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>