force-app/main/default/objects/Survey_Response__c/fields/How_did_you_find_the_allhands__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_the_allhands__c</fullName>
    <label>How did you find the allhands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>