force-app/main/default/objects/Survey_Response__c/fields/How_easy_to_find_what_you_were_looking__c.field-meta.xml
<CustomField>
    <fullName>How_easy_to_find_what_you_were_looking__c</fullName>
    <label>How easy to find what you were looking?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely easy</fullName>
            </value>
            <value>
                <fullName>Very easy</fullName>
            </value>
            <value>
                <fullName>Somewhat easy</fullName>
            </value>
            <value>
                <fullName>Not so easy</fullName>
            </value>
            <value>
                <fullName>Not at all easy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>