force-app/main/default/objects/Survey_Response__c/fields/How_engaging_was_your_instructor__c.field-meta.xml
<CustomField>
    <fullName>How_engaging_was_your_instructor__c</fullName>
    <label>How engaging was your instructor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely engaging</fullName>
            </value>
            <value>
                <fullName>Not so engaging</fullName>
            </value>
            <value>
                <fullName>Somewhat engaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>