force-app/main/default/objects/Survey_Response__c/fields/How_often_do_you_think_these_meetings_sh__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_think_these_meetings_sh__c</fullName>
    <label>How often do you think these meetings sh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi- Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>