force-app/main/default/objects/Survey_Response__c/fields/How_visually_appealing_is_our_website__c.field-meta.xml
<CustomField>
    <fullName>How_visually_appealing_is_our_website__c</fullName>
    <label>How visually appealing is our website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely appealing</fullName>
            </value>
            <value>
                <fullName>Very appealing</fullName>
            </value>
            <value>
                <fullName>Somewhat appealing</fullName>
            </value>
            <value>
                <fullName>Not so appealing</fullName>
            </value>
            <value>
                <fullName>Not at all appealing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>