force-app/main/default/objects/Survey_Response__c/fields/Overall_how_well_does_our_website_meet__c.field-meta.xml
<CustomField>
    <fullName>Overall_how_well_does_our_website_meet__c</fullName>
    <label>Overall how well does our website meet?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely well</fullName>
            </value>
            <value>
                <fullName>Very well</fullName>
            </value>
            <value>
                <fullName>Somewhat well</fullName>
            </value>
            <value>
                <fullName>Not so well</fullName>
            </value>
            <value>
                <fullName>Not at all well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>