force-app/main/default/objects/Survey_Response__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Parenting</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Cafetaria Services</fullName>
            </value>
            <value>
                <fullName>Professional Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>