force-app/main/default/objects/Survey_Response__c/fields/Was_the_audio_quality_good__c.field-meta.xml
<CustomField>
    <fullName>Was_the_audio_quality_good__c</fullName>
    <label>Was the audio quality good?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>