force-app/main/default/objects/Survey_Response__c/fields/Were_you_satisfied_with_the_information__c.field-meta.xml
<CustomField>
    <fullName>Were_you_satisfied_with_the_information__c</fullName>
    <label>Were you satisfied with the information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>