force-app/main/default/objects/Survey_Response__c/fields/What_topic_or_information_would_you_reco__c.field-meta.xml
<CustomField>
    <fullName>What_topic_or_information_would_you_reco__c</fullName>
    <label>What topic or information would you reco</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>