force-app/main/default/objects/Survey_Response__c/fields/X2_How_do_you_feel_about_the_information__c.field-meta.xml
<CustomField>
    <fullName>X2_How_do_you_feel_about_the_information__c</fullName>
    <label>How do you feel about the information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>About the right amount of information</fullName>
            </value>
            <value>
                <fullName>Much too much information</fullName>
                <label>Too much information</label>
            </value>
            <value>
                <fullName>Much too little information</fullName>
                <label>Too little information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>