force-app/main/default/objects/Survey_Response__c/fields/X3_How_relevant_is_the_material_to_your__c.field-meta.xml
<CustomField>
    <fullName>X3_How_relevant_is_the_material_to_your__c</fullName>
    <label>How relevant is the material to your</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely relevant</fullName>
            </value>
            <value>
                <fullName>Not so relevant</fullName>
            </value>
            <value>
                <fullName>Somewhat relevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>