force-app/main/default/objects/Survey_Response__c/fields/X5_Do_you_have_any_other_comments_quest__c.field-meta.xml
<CustomField>
    <fullName>X5_Do_you_have_any_other_comments_quest__c</fullName>
    <label>5.	Do you have any other comments, quest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>